--- a/.github/workflows/firstWorkFlow.yml
+++ b/.github/workflows/firstWorkFlow.yml
@@ -37,5 +37,14 @@ jobs:
       - name: enviroment variables
         env:
           STEP_VAR: "This variable is declared at step level"
+        run: |
+          echo $WORKFLOW_VAR
+          echo $JOB_VAR
+          echo: $STEP_VAR
+          echo: "The followins is a secret: ${{ secrets.SOME_SECRET }}, of course, I can't tell you because then it wouldn't be a secret..."
+          echo: "The following are default enviroment variables: "
+          echo: $GITHUB_ACTOR
+          echo: $GITHUB_JOB
+          echo: $GITHUB_REF
 
       
